--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         <section class="intro">
             <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 2rem;">
                 <div style="flex: 1; min-width: 300px;">
-                    <h2>About Learning Emu & the Instructor</h2>
-                    <p>Hello, I am Naeemul Hassan, an assistant professor at the University of Maryland at College Park. I am offering two courses this Summer 2025. Please indicate if you are interested in Introduction to Python Programming and/or Introduction to Data Science courses by <strong>May 25, 2025</strong>.</p>
+                    <h2>About the Instructor</h2>
+                    <p>Hello, I am Naeemul Hassan, an assistant professor at the University of Maryland at College Park. I explore interdisciplinary research problems at the intersection of computation, information science, and journalism. Details of our works can be found in our lab's website <a href="'https://cjlab-umd.github.io">cjlab-umd.github.io</a>. I am offering two courses this Summer 2025. Please indicate if you are interested in <strong>Introduction to Python Programming</strong> and/or <strong>Introduction to Data Science</strong> courses by <strong>May 25, 2025</strong>.</p>
                     <p>If you have any questions, please feel free to reach out to me.</p>
                     <div class="contact-info">
                         <p><strong>Dr. Naeemul Hassan</strong></p>
