fixed invisible links in about section

--- a/index.html
+++ b/index.html
@@ -160,16 +160,17 @@
             <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 2rem;">
                 <div style="flex: 1; min-width: 300px;">
                     <h2>About the Instructor</h2>
-                    <p>Hello, I am Naeemul Hassan, an assistant professor at the University of Maryland at College Park. I explore interdisciplinary research problems at the intersection of computation, information science, and journalism. Details of our works can be found in our lab's website <a href="'https://cjlab-umd.github.io">cjlab-umd.github.io</a>. I am offering two courses this Summer 2025. Please indicate if you are interested in <strong>Introduction to Python Programming</strong> and/or <strong>Introduction to Data Science</strong> courses by <strong>May 25, 2025</strong>.</p>
+                    <p>Hello, I am Naeemul Hassan, an assistant professor at the University of Maryland at College Park. I explore interdisciplinary research problems at the intersection of computation, information science, and journalism. Details of our works can be found in our lab's website <a href="'https://cjlab-umd.github.io">cjlab-umd.github.io</a>.</p> 
+                    <p>I am offering two courses this Summer 2025. Please indicate if you are interested in <strong>Introduction to Python Programming</strong> and/or <strong>Introduction to Data Science</strong> courses by <strong>May 25, 2025</strong>.</p>
                     <p>If you have any questions, please feel free to reach out to me.</p>
                     <div class="contact-info">
                         <p><strong>Dr. Naeemul Hassan</strong></p>
-                        <p>Email: <a href="mailto:learningemu@gmail.com">learningemu@gmail.com</a></p>
-                        <p>Facebook: <a href="https://www.facebook.com/naffi" target="_blank">www.facebook.com/naffi</a></p>
+                        <p>Email: <a href="mailto:learningemu@gmail.com" style="color: #2a6496; text-decoration: none; font-weight: bold;">learningemu@gmail.com</a></p>
+                        <p>Facebook: <a href="https://www.facebook.com/naffi" target="_blank" style="color: #2a6496; text-decoration: none; font-weight: bold;">www.facebook.com/naffi</a></p>
                     </div>
                 </div>
                 <div style="flex: 1; min-width: 250px; display: flex; justify-content: center;">
-                    <img src="/api/placeholder/300/300" alt="Dr. Naeemul Hassan" style="border-radius: 5px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); max-width: 100%;">
+                    <img src="naffi.webp" alt="Dr. Naeemul Hassan" style="border-radius: 5px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); max-width: 100%;">
                 </div>
             </div>
         </section>
