--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
             text-decoration: none;
             font-weight: bold;
             transition: background-color 0.3s;
+            margin-top: 10px;
         }
         
         .btn:hover {
